// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: className css 1`] = `
".MuiTouchRipple-root {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: 0;
  position: absolute;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}
.MuiTouchRipple-wrapper {
  opacity: 1;
}
.MuiTouchRipple-wrapperLeaving {
  opacity: 0;
  animation: mui-ripple-exit 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-wrapperPulsating {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  animation: mui-ripple-pulsate 1500ms cubic-bezier(0.4, 0, 0.2, 1) 200ms infinite;
}
@keyframes mui-ripple-enter {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes mui-ripple-exit {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes mui-ripple-pulsate {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(0.9);
  }
  100% {
    transform: scale(1);
  }
}
.MuiTouchRipple-ripple {
  top: 0;
  left: 0;
  width: 50px;
  height: 50px;
  opacity: 0;
  position: absolute;
  background: currentColor;
  border-radius: 50%;
}
.MuiTouchRipple-rippleVisible {
  opacity: 0.3;
  transform: scale(1);
  animation: mui-ripple-enter 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-rippleFast {
  animation-duration: 200ms;
}
.MuiButtonBase-root {
  color: inherit;
  border: 0;
  cursor: pointer;
  display: inline-flex;
  outline: none;
  position: relative;
  appearance: none;
  align-items: center;
  user-select: none;
  border-radius: 0;
  justify-content: center;
  text-decoration: none;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.MuiButtonBase-root::-moz-focus-inner {
  border-style: none;
}
.MuiButtonBase-disabled {
  cursor: default;
  pointer-events: none;
}
.MuiButton-root {
  color: rgba(0, 0, 0, 0.87);
  padding: 8px 16px;
  min-width: 88px;
  font-size: 0.875rem;
  box-sizing: border-box;
  min-height: 36px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  line-height: 1.4em;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  font-weight: 500;
  border-radius: 2px;
  text-transform: uppercase;
}
.MuiButton-root:hover {
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.12);
}
@media (hover: none) {
  .MuiButton-root:hover {
    background-color: transparent;
  }
}
.MuiButton-root:hover.MuiButton-disabled {
  background-color: transparent;
}
.MuiButton-dense {
  padding: 7px 8px;
  min-width: 64px;
  font-size: 0.8125rem;
  min-height: 32px;
}
.MuiButton-label {
  width: 100%;
  display: inherit;
  align-items: inherit;
  justify-content: inherit;
}
.MuiButton-flatPrimary {
  color: #3f51b5;
}
.MuiButton-flatPrimary:hover {
  background-color: rgba(63, 81, 181, 0.12);
}
@media (hover: none) {
  .MuiButton-flatPrimary:hover {
    background-color: transparent;
  }
}
.MuiButton-flatAccent {
  color: #ff4081;
}
.MuiButton-flatAccent:hover {
  background-color: rgba(255, 64, 129, 0.12);
}
@media (hover: none) {
  .MuiButton-flatAccent:hover {
    background-color: transparent;
  }
}
.MuiButton-flatContrast {
  color: rgba(255, 255, 255, 1);
}
.MuiButton-flatContrast:hover {
  background-color: rgba(255, 255, 255, 0.12);
}
@media (hover: none) {
  .MuiButton-flatContrast:hover {
    background-color: transparent;
  }
}
.MuiButton-colorInherit {
  color: inherit;
}
.MuiButton-raised {
  color: rgba(0, 0, 0, 0.87);
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12);
  background-color: #e0e0e0;
}
.MuiButton-raised.MuiButton-keyboardFocused {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}
.MuiButton-raised:active {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.MuiButton-raised.MuiButton-disabled {
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}
.MuiButton-raised:hover {
  background-color: #d5d5d5;
}
@media (hover: none) {
  .MuiButton-raised:hover {
    background-color: #e0e0e0;
  }
}
.MuiButton-raised:hover.MuiButton-disabled {
  background-color: rgba(0, 0, 0, 0.12);
}
@media (hover: none) {
  .MuiButton-raised:hover.MuiButton-disabled {
    background-color: #e0e0e0;
  }
}
.MuiButton-raisedPrimary {
  color: rgba(255, 255, 255, 1);
  background-color: #3f51b5;
}
.MuiButton-raisedPrimary:hover {
  background-color: #303f9f;
}
@media (hover: none) {
  .MuiButton-raisedPrimary:hover {
    background-color: #3f51b5;
  }
}
.MuiButton-raisedAccent {
  color: rgba(255, 255, 255, 1);
  background-color: #ff4081;
}
.MuiButton-raisedAccent:hover {
  background-color: #f50057;
}
@media (hover: none) {
  .MuiButton-raisedAccent:hover {
    background-color: #ff4081;
  }
}
.MuiButton-raisedContrast {
  color: rgba(255, 255, 255, 1);
}
.MuiButton-disabled {
  color: rgba(0, 0, 0, 0.26);
}
.MuiButton-fab {
  width: 56px;
  height: 56px;
  padding: 0;
  min-width: 0;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
  border-radius: 50%;
}
.MuiButton-fab:active {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12);
}
.fcButton-root {
  width: 100%;
}"
`;

exports[`snapshot: className html 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-raisedPrimary fcButton-root test-class"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`snapshot: label and raised css 1`] = `""`;

exports[`snapshot: label and raised html 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-flatPrimary fcButton-root"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    button
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`snapshot: only label css 1`] = `""`;

exports[`snapshot: only label html 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-raisedPrimary fcButton-root"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    button
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`snapshot: read only css 1`] = `""`;

exports[`snapshot: read only html 1`] = `
<button
  className="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-raised MuiButton-raisedPrimary MuiButton-disabled fcButton-root"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    button
  </span>
</button>
`;

exports[`snapshot: with handlers css 1`] = `""`;

exports[`snapshot: with handlers html 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-raisedPrimary fcButton-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    button
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`snapshot: with long text css 1`] = `""`;

exports[`snapshot: with long text html 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-raisedPrimary fcButton-root"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`snapshot: with text css 1`] = `""`;

exports[`snapshot: with text html 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-raisedAccent fcButton-root"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    button
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`snapshot: without props css 1`] = `""`;

exports[`snapshot: without props html 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-raisedPrimary fcButton-root"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
